# vex-rs

./: .gitattributes  Cargo.toml  README.md  architecture.md  config.toml
.github/workflows/: rust-clippy.yml
example/: 4_wide_critpath_fanout_source_simple.s  4_wide_critpath_source_simple.s  4_wide_fanout_source_simple.s  4_wide_rename_source_simple.s  4_wide_resource_source_simple.s  4_wide_source_simple.s  basic_block.s  simple.s  toy.s
src/: config.rs  lib.rs  machine.rs  main.rs  operation.rs  program.rs
src/operation/: arithmetic.rs  help.rs  intercluster.rs  logical.rs  memory.rs  mod.rs
